# nrf24.mtp

./: .gitignore  README.md  ack_window_2_TESTS.py  lorem.txt  p2p_no_burst.py  point_to_point_mode.py  point_to_point_mode_2.py  point_to_point_mode_Edgar.py  point_to_point_mode_header_packetRx.py  pyproject.toml  quick_mode copy.py  quick_mode.py  quick_modemod.py  radio.py  rx_flow.py  rx_flow_Edgar.py  rx_flow_no_burst.py  tx_flow.py  tx_flow_Edgar.py  tx_flow_no_burst.py  utils.py
BER test/: BER_test_code.py
Matlabt BER/: Ber_vs_EB.m
Quick_Mode/: quick_mode.py
Test_compresion/: compresion_test.py  compression.ipynb
Test_compresion/original_files/: redundancy_00.txt  redundancy_10.txt  redundancy_20.txt  redundancy_30.txt  redundancy_40.txt  redundancy_50.txt  redundancy_60.txt  redundancy_70.txt  redundancy_80.txt  redundancy_90.txt
ack_mode/: ack_mode_burst  ack_window  ack_window.py  ack_window_2.py  ack_window_2_TESTS.py  ack_window_AUTOACK.py  ack_window_Pau.py  acks_mode  acks_mode.py  lorem.txt  ping_pong.py  radio.py
mechanisms_tests/: custom_payload.py  ping_pong_ack.py  radio.py
nrf24_mtp/: __init__.py
nrf24_mtp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nrf24_mtp/layers/: ApplicationLayer.py  __init__.py
nrf24_mtp/trx/: Trx.py  __init__.py
nrf24_mtp/utils/: Logger.py  ProgressBar.py  __init__.py
test_suite/: layers_ApplicationLayer.py  utils_Logger.py  utils_ProgressBar.py
